deps/v8/test/message/try-catch-variable-conflict.out
*%(basename)s:9: SyntaxError: Identifier 'x' has already been declared
  var x;
      ^
SyntaxError: Identifier 'x' has already been declared
