deps/v8/test/message/try-catch-variable-conflict.js
// Copyright 2015 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// Flags: --harmony-destructuring-bind

try {
} catch ({x}) {
  var x;
}
